--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build:web": "expo export:web --output-dir web-build",
+    "predeploy": "npm run build:web",
+    "deploy": "gh-pages -d web-build",
     "lint": "expo lint"
   },
   "dependencies": {
@@ -31,17 +34,19 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-worklets": "0.5.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "gh-pages": "^5.0.0",
+    "typescript": "~5.9.2"
   },
+  "homepage": "https://phuong5514.github.io/sum-calculator",
   "private": true
 }
