Refactor calculator component and update deployment scripts

--- a/app.json
+++ b/app.json
@@ -41,6 +41,7 @@
       ]
     ],
     "experiments": {
+      "baseUrl": "/sum-calculator",
       "typedRoutes": true,
       "reactCompiler": true
     }
